[gd_scene load_steps=10 format=3 uid="uid://cgcfx3twc5adf"]

[ext_resource type="PackedScene" uid="uid://c8usdvp4rr7d2" path="res://Board.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="2"]
[ext_resource type="PackedScene" path="res://Alert.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dl4s6x8gtvxk8" path="res://engine/Engine.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://byu46yrpllged" path="res://assets/start.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cwborbub37eyr" path="res://assets/end.png" id="6"]
[ext_resource type="Texture2D" uid="uid://t2ddb83ng7u7" path="res://assets/play.png" id="7"]
[ext_resource type="PackedScene" path="res://Promote.tscn" id="8"]

[sub_resource type="ImageTexture" id="1"]

[node name="Main" type="MarginContainer"]
custom_minimum_size = Vector2(600, 600)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("2")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBar" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_type_variation = &"Panel"

[node name="VBox" type="VBoxContainer" parent="VBox/TopBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InfoRow" type="HBoxContainer" parent="VBox/TopBar/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Ponder" type="HBoxContainer" parent="VBox/TopBar/VBox/InfoRow"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="VBox/TopBar/VBox/InfoRow/Ponder"]
layout_mode = 2
text = "Ponder:"

[node name="Move" type="Label" parent="VBox/TopBar/VBox/InfoRow/Ponder"]
layout_mode = 2
text = "e6e5"

[node name="Info" type="HBoxContainer" parent="VBox/TopBar/VBox/InfoRow"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LastMoveLabel" type="Label" parent="VBox/TopBar/VBox/InfoRow/Info"]
layout_mode = 2
text = "Last:"

[node name="LastMove" type="Label" parent="VBox/TopBar/VBox/InfoRow/Info"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "-"

[node name="ScoreWhite" type="Label" parent="VBox/TopBar/VBox/InfoRow/Info"]
layout_mode = 2
text = "W: 0"

[node name="ScoreBlack" type="Label" parent="VBox/TopBar/VBox/InfoRow/Info"]
layout_mode = 2
text = "B: 0"

[node name="HalfMoves" type="Label" parent="VBox/TopBar/VBox/InfoRow/Info"]
layout_mode = 2
text = "50: 0"

[node name="ControlRow" type="HBoxContainer" parent="VBox/TopBar/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Menu" type="HBoxContainer" parent="VBox/TopBar/VBox/ControlRow"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Next" type="Button" parent="VBox/TopBar/VBox/ControlRow/Menu"]
layout_mode = 2
text = "Next"
icon = SubResource("1")

[node name="Load" type="Button" parent="VBox/TopBar/VBox/ControlRow/Menu"]
layout_mode = 2
text = "Load"

[node name="Save" type="Button" parent="VBox/TopBar/VBox/ControlRow/Menu"]
layout_mode = 2
text = "Save"

[node name="History" type="Button" parent="VBox/TopBar/VBox/ControlRow/Menu"]
layout_mode = 2
text = "Hist"

[node name="Options" type="HBoxContainer" parent="VBox/TopBar/VBox/ControlRow"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CheckBox" type="CheckBox" parent="VBox/TopBar/VBox/ControlRow/Options"]
layout_mode = 2
text = "Hint"

[node name="Reset" type="Button" parent="VBox/TopBar/VBox/ControlRow/Options"]
layout_mode = 2
text = "Reset"

[node name="TB" type="HBoxContainer" parent="VBox/TopBar/VBox/ControlRow/Options"]
modulate = Color(0.337255, 0.415686, 0.823529, 1)
layout_mode = 2
theme_override_constants/separation = 2

[node name="Begin" type="TextureButton" parent="VBox/TopBar/VBox/ControlRow/Options/TB"]
layout_mode = 2
texture_normal = ExtResource("5")

[node name="Forward" type="TextureButton" parent="VBox/TopBar/VBox/ControlRow/Options/TB"]
layout_mode = 2
texture_normal = ExtResource("7")

[node name="End" type="TextureButton" parent="VBox/TopBar/VBox/ControlRow/Options/TB"]
layout_mode = 2
texture_normal = ExtResource("6")

[node name="Count" type="Label" parent="VBox/TopBar/VBox/ControlRow/Options/TB"]
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
text = "000/000"

[node name="TopPiecesBar" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_type_variation = &"Panel"

[node name="HBox" type="HBoxContainer" parent="VBox/TopPiecesBar"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WhitePieces" type="GridContainer" parent="VBox/TopPiecesBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 16

[node name="BoardArea" type="CenterContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Board" parent="VBox/BoardArea" instance=ExtResource("1")]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_constants/margin_right = 0

[node name="BottomBar" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme_type_variation = &"Panel"

[node name="HBox" type="HBoxContainer" parent="VBox/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BlackPieces" type="GridContainer" parent="VBox/BottomBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 16

[node name="Engine" parent="." instance=ExtResource("4")]

[node name="c" type="CanvasLayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="c"]
access = 2
show_hidden_files = true

[node name="Alert" parent="c" instance=ExtResource("3")]

[node name="Promote" parent="c" instance=ExtResource("8")]
visible = false

